src/test/deca/context/invalid/created/multiple_definition/methods.deca
// Description:
//      Multiple definition of a method
// Resultats:
//      Error Ligne 8 :  Method already defined in the class

class A {
    void get(){}
    void get(){}
}